PN-20248 feat: enhance MessageValidator to handle message with secondaryContent in notification without additionalLanguages